--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">SeviBus4</string>
+    <string name="app_name">SeviBus</string>
+
+    <string name="navigation_for_you">Para ti</string>
+    <string name="navigation_lines">Líneas</string>
+    <string name="navigation_map">Mapa</string>
+    <string name="navigation_cards">Bonobús</string>
 </resources>
