--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="navigation_lines">Líneas</string>
     <string name="navigation_map">Mapa</string>
     <string name="navigation_cards">Bonobús</string>
+
+    <string name="content_description_favorite_add">Guardar como favorito</string>
 </resources>
