feat: add opt-out analytics setting
This commit introduces an option for users to disable anonymous analytics collection.

Key Changes:
- Add `AnalyticsSettingsDataSource` to manage user preference for analytics, stored in DataStore.
- Modify `Analytics` class to check `AnalyticsSettingsDataSource` before tracking events. Analytics events are now processed in a background coroutine.
- Add a toggle switch in the Settings screen to enable/disable analytics.
  - This new setting is placed under the "Services" section.
  - Includes descriptive text explaining the purpose of anonymous analytics.
- Add new analytics event `Clicks.AnalyticsDisabledClicked` to track when users opt-out.
- Update `SettingsViewModel` to handle changes in the analytics preference and interact with `AnalyticsSettingsDataSource`.
- Inject `AnalyticsSettingsDataSource` and update `Analytics` and `SettingsViewModel` dependencies in the DI module.
- Add string resources for the new setting in both English and Spanish.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -121,6 +121,8 @@
     <string name="settings_appearance">Appearance</string>
     <string name="settings_dark_mode">Dark mode</string>
     <string name="settings_services">Services</string>
+    <string name="settings_analytics">Allow anonymous analytics</string>
+    <string name="settings_analytics_description">They help us to improve the app without tracking your personal information</string>
     <string name="settings_give_feedback">Give us feedback</string>
     <string name="settings_feedback_description">Have any issues or suggestions? Help us improve!</string>
     <string name="settings_login_to_save_favorites">Sign in to save your favorite stops and travel cards.</string>
