--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,8 @@
     <string name="settings_appearance">Apariencia</string>
     <string name="settings_dark_mode">Modo oscuro</string>
     <string name="settings_services">Servicios</string>
+    <string name="settings_analytics">Permitir estadísticas anónimas</string>
+    <string name="settings_analytics_description">Nos ayudan a mejorar la app sin recopilar tu información personal</string>
     <string name="settings_give_feedback">Danos tu opinión</string>
     <string name="settings_feedback_description">¿Tienes algún problemilla o sugerencia? ¡Ayúdanos a mejorar!</string>
     <string name="settings_login_to_save_favorites">Inicia sesión para guardar tus paradas favoritas y tus tarjetas de bonobús.</string>
