feat: implement card alerts and deep linking
This commit introduces a card alert system and enhances navigation to support deep linking to specific cards.

Key Changes:
- Add `CardAlert` domain model and `CardAlertDto` for API communication.
- Implement `AlertWidget` Composable to display card alerts on the "For You" screen.
- Create `AlertViewModel` to fetch and manage `AlertState` (Hidden or CardAlert).
- Integrate `AlertWidget` into `ForYouScreen`, allowing navigation to the `CardsScreen` with a specific `cardId` when an alert is clicked.
- Modify `CardsScreen` and `CardViewModel` to accept an optional initial `cardId` for deep linking and scrolling to the specified card.
- Update `SevibusUserApi` to include `getUserCardAlerts()` endpoint.
- Enhance `RemoteAndLocalCardsRepository` to fetch card alerts and update local card data handling.
- Adjust `NavigationDestination.Cards` to accept an optional `cardId` parameter.
- Update `MainActivity` to navigate to `CardsScreen` (without a specific card) on NFC tag discovery.
- Add "View" string resource for the card alert action button.
- Increase HTTP debug overlay delay from 5 to 8 seconds.
- Ensure anonymous card updates are handled correctly when the user is not logged in.
- Refactor card ordering logic in `RemoteAndLocalCardsRepository`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="foryou_location_permission_message">Activa los servicios de localización para ver las paradas más cercanas a tu posición.</string>
     <string name="foryou_activate_location">Activar localización</string>
     <string name="foryou_login_with_google">Inicia sesión con Google</string>
+    <string name="foryou_card_low_balance_action">Ver</string>
 
     <!-- ================== -->
     <!-- Lines Screen -->
