--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -39,6 +39,7 @@
     <string name="foryou_location_permission_message">Enable location services to see the stops closest to your position.</string>
     <string name="foryou_activate_location">Activate location</string>
     <string name="foryou_login_with_google">Sign in with Google</string>
+    <string name="foryou_card_low_balance_action">View</string>
 
     <!-- ================== -->
     <!-- Lines Screen -->
