refactor: implement client-side card balance alerts
This commit refactors the card alert system to perform balance checks on the client-side instead of relying on a dedicated server endpoint.

Key Changes:
- Remove `CardAlert` domain model and `CardAlertDto` API model.
- Delete `getUserCardAlerts()` endpoint from `SevibusUserApi`.
- Modify `AlertViewModel` to fetch all user cards and check their balances locally.
  - Introduces `LowBalance` and `NegativeBalance` states in `AlertState`.
  - A card is considered low balance if below 3.00€ (300 cents).
- Update `AlertWidget` to display different messages based on the new `LowBalance` and `NegativeBalance` states.
- Remove `getCardAlert()` method from `CardsRepository` and its implementation in `RemoteAndLocalCardsRepository`.
- Add new string resources for low balance and negative balance alert messages in both Spanish and English.

This change simplifies the backend by removing an endpoint and gives the client more control over how balance alerts are determined and displayed.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -39,6 +39,8 @@
     <string name="foryou_location_permission_message">Enable location services to see the stops closest to your position.</string>
     <string name="foryou_activate_location">Activate location</string>
     <string name="foryou_login_with_google">Sign in with Google</string>
+    <string name="foryou_card_low_balance_alert">You have a card with low balance</string>
+    <string name="foryou_card_negative_balance_alert">You have a card with negative balance</string>
     <string name="foryou_card_low_balance_action">View</string>
 
     <!-- ================== -->
