--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="foryou_location_permission_message">Activa los servicios de localización para ver las paradas más cercanas a tu posición.</string>
     <string name="foryou_activate_location">Activar localización</string>
     <string name="foryou_login_with_google">Inicia sesión con Google</string>
+    <string name="foryou_card_low_balance_alert">Tienes un bonobús con poco saldo</string>
+    <string name="foryou_card_negative_balance_alert">Tienes un bonobús con saldo negativo</string>
     <string name="foryou_card_low_balance_action">Ver</string>
 
     <!-- ================== -->
