feat: dismissible low balance alerts
This commit introduces a dismissible alert system for cards with low balance. Users can now hide low balance alerts, which will remain hidden until the card's balance is topped up above the threshold.

Key Changes:
- Add `SmallSurfaceButton` composable for compact action buttons.
- Update `AlertWidget` to include "Ocultar" (Dismiss) and "Ver" (View) buttons.
- Modify `AlertViewModel` to:
    - Observe both user cards and dismissed card IDs.
    - Show alerts only for low balance cards that haven't been dismissed.
    - Automatically clear dismissed alerts if the card balance rises above the threshold.
- Create `DismissedAlertEntity` to store dismissed card IDs in the database.
- Update `SevibusDatabase` schema to version 9, including the `dismissed_alerts` table.
- Extend `SevibusDao` with methods to:
    - Insert, query, and delete dismissed alert entries.
    - Observe changes to dismissed card IDs.
- Enhance `RemoteAndLocalCardsRepository` to:
    - Manage dismissed alerts (add, clear, fetch).
    - Automatically clear dismissed alerts when a card's balance is updated from below to above the threshold during local or remote synchronization.
- Update `CardsRepository` interface with methods for managing dismissed alerts.

Technical Details:
- The low balance threshold is set at 300 cents (3€).
- Dismissed alerts are persisted in the `dismissed_alerts` database table.
- The `AlertViewModel` uses `combine` to reactively update the alert state based on card balances and dismissed alerts.
- Database migration from version 8 to 9 adds the new `dismissed_alerts` table.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -39,9 +39,11 @@
     <string name="foryou_location_permission_message">Enable location services to see the stops closest to your position.</string>
     <string name="foryou_activate_location">Activate location</string>
     <string name="foryou_login_with_google">Sign in with Google</string>
-    <string name="foryou_card_low_balance_alert">You have a card with low balance</string>
-    <string name="foryou_card_negative_balance_alert">You have a card with negative balance</string>
-    <string name="foryou_card_low_balance_action">View</string>
+    <string name="foryou_card_alert_title">Low balance</string>
+    <string name="foryou_card_alert_low_balance_description">You have a travel card with low balance. Top it up so you don\'t run out of trips.</string>
+    <string name="foryou_card_alert_negative_balance_description">You have a card with negative balance. Top it up so you don\'t run out of trips.</string>
+    <string name="foryou_card_alert_action_see">View</string>
+    <string name="foryou_card_alert_action_dismiss">Dismiss</string>
 
     <!-- ================== -->
     <!-- Lines Screen -->
